# chatglm.cpp

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: benchmark.py  inference_benchmark.py
examples/: inference.py
python/: chatglm.cpp  chatglm.py
scripts/: build.sh
src/: CMakeLists.txt  beam_search.h  chatglm.cpp  chatglm.h  ggml_wrapper.cpp  ggml_wrapper.h  sentencepiece.cpp  sentencepiece.h  tokenizer.cpp  tokenizer.h  utils.cpp
src/test/: test_chatglm.cpp  test_ggml_wrapper.cpp  test_tokenizer.cpp
tests/: test_bindings.py  test_core.cpp  test_integration.py
